# gnome-session-leader-openrc

./: README.md  meson.build
src/: constants.vala  leader.vala  meson.build
src/vapi/: openrc.vapi
